--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
   db:
     image: mongo
     ports:
-      - "27017"
+      - "27017:27017"
 
-  game:
+  service:
     build: .
     command: /bin/app
     environment:
